# GIO_ODOM

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: inno.yaml  inno_lio.rviz
include/: common_lib.h  so3_math.h  use-ikfom.hpp
include/IKFoM_toolkit/esekfom/: esekfom.hpp
include/IKFoM_toolkit/mtk/: startIdx.hpp
launch/: gio_localization.launch  inno_mapping.launch  unit_test.launch
msg/: inno_point.msg  inno_points.msg
src/: GIO_stream.cpp  GPS_Process.hpp  eskf.hpp  eskf_flow.hpp
test/: test_1.cpp
tools/: test.py
